--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,29 @@
-<div class="page-header">
-  <div class="container">
-    <h1>Router Sample</h1>
-    <div class="navLinks">
-      <a [routerLink]="['/home']"></a>
-      <a [routerLink]="['/about']"></a>
-      <a [routerLink]="['/contact']"></a>
-    </div>
-  </div>
-</div>
 
-<div id="content">
-  <div class="container">
-    <router-outlet></router-outlet>
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">WebSiteName</a>
+    </div>
+    <ul class="nav navbar-nav">
+      <li class="active">
+          <a [routerLink]="['/home']">Home</a>
+      </li>
+
+      <li>
+          <a [routerLink]="['/about']">About</a>
+      </li>
+
+      <li>
+          <a [routerLink]="['/contact']">Contact</a>
+      </li>
+
+      <li>
+          <a [routerLink]="['/article/123456']">Article Params</a>
+      </li>
+    </ul>
   </div>
+</nav>
+
+<div class="container">
+  <router-outlet></router-outlet>
 </div>
